--- a/EXTRA_CREDIT.Rmd
+++ b/EXTRA_CREDIT.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Extra credit options"
 author: "NRES 470/670"
-date: "Spring 2021"
+date: "Spring 2022"
 output: 
   html_document: 
     theme: spacelab
@@ -13,11 +13,11 @@ output:
 knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 ```
 
-You may submit up to four extra credit essays -- a maximum of two of each of the options listed below... 
+You may submit up to two extra credit essays -- one for each of the options listed below... 
 
 ## Extra Credit Option 1 -- Journal Article Response
 
-#### Total points possible: 10 (up to two submissions)
+#### Total points possible: 10 (one submission)
 
 **Due at the end of finals period**
 
@@ -25,7 +25,7 @@ You may submit up to four extra credit essays -- a maximum of two of each of the
 1. Connect the content of this course with active research areas in the expanding, dynamic field of population ecology.   
 2. Engage with original scientific literature in this field of study.      
 
-Select a *peer-reviewed journal article* on a topic _relevant to population ecology_.    
+Select a *peer-reviewed journal article* on a topic _relevant to applied population ecology_.    
 
 - The article should develop a population model to address a conservation or management question
       - The article could present newly collected data that were then analyzed to parameterize a population model, *OR* could present an analysis of already existing data to develop a different population model than has already been developed for the species/system.
@@ -38,15 +38,15 @@ Select a *peer-reviewed journal article* on a topic _relevant to population ecol
 1. No more than 2 pages, double-spaced, size 12 font.
 2. Use essay format: write in complete sentences and coherent paragraphs.
 3. Three main elements to write about:    
-      - Summarize **main methods and results**
-      - Identify **how the research was applied** to a particular conservation or management issue, and describe the relationship between the research and the contents of this course.
-      - Provide **your personal response** to the article - why did you choose to read it, what did you like about it, and what did you learn?
+      - Summarize **research questions, main methods and results**
+      - Identify **how the research was applied** to a particular conservation or management issue, and describe the relationship between the research and the contents of this course. Please be as specific as possible about how the course concepts link to your chosen article. 
+      - Provide **your personal response** to the article - why did you choose to read it, and what did you learn?
       
 Upload your written response and a PDF of the journal article to WebCampus.
 
 ## Extra Credit Option #2 – Population Ecology Talk
 
-#### Total points possible: 10 (up to 2 submissions)
+#### Total points possible: 10 (one submission)
 
 **Due at the end of finals period**
 
@@ -67,9 +67,9 @@ Upload your written response and a PDF of the journal article to WebCampus.
 1.	No more than 2 pages, double-spaced, size 12 font.
 2.	Use essay format: write in complete sentences and coherent paragraphs.
 3.	Three main facets to write about:
-    - What themes/models/dynamics were discussed that are **directly related** to what you’ve learned about in class?
+    - What themes/models/dynamics were discussed that are **directly related** to what you’ve learned about in class? Please be as specific as possible about how the course concepts link to your chosen talk. 
     - What was the **conservation or management issue** that the researcher(s) addressed? What surprising or novel findings did the researcher(s) present?
-    - Provide **your personal response** to the talk - why did you choose to attend, and what did you like about it? Was there anything that was unclear or that you would like to learn more about?
+    - Provide **your personal response** to the talk - why did you choose to attend? Was there anything that was unclear or that you would like to learn more about?
 
 Upload your written response to WebCampus.
 
